Completed s3 Bucket resume upload

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet">
     <title>Job Board</title>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
